--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/totals/footer-item/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/totals/footer-item/style.scss
@@ -15,6 +15,7 @@
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		white-space: pre;
 
 		.wc-block-components-skeleton__element {
 			margin-left: 0.5em;
