Introduce alpha version of Back in Stock Notifications (#59947)
* MIC: Create base infrastructure and DB tables for Back in Stock Notifications (#57062)

* Add base service and database schema

* Make linter happy

* Linter ignore

* Rename datastore class

* Add basic CRUD for notifications, metadata, and a helper for logs

* Make linter happy again

* Shorten table names, suffix dates with gmt, introduce dedicated meta store

* Fix docblock on reusable datastore

* Lint fixes

* Lint fixes

* Update service provider

* Lint fixes

* Lint fixes

* Lint fixes

* Lint fixes

* Fix dbDelta issues with capital letters and phpcs fixes

* Add specific query formats

* Remove object keyword refs

* Remove meta cache duplication in favor of WC_Data level caching

* Improvements in stock notifications CRUD and introduce WP_Error returns

* Docblock improvements

* Create the main controller and wire the data store

* Fix data stores for basic CRUD and add unit tests

* Add metadata handling and unit tests

* Lint fixes

* Organize unit tests and align create and modified dates

* Alias main controller init and make linter happy

* One more lint fix

* Imporvements and new db table indexes

* Clean up notification unit tests

* Add metadata unit tests

* Rename the event log helper

* Add a factory, unit tests, and move notifications tests

* Lint fixes

* Make linter happy

* Add a query method

* Create data store for logs

* Lint fixes

* Lint fixes and fix the init data store of logs

* Fix error in log params

* Use the main datastore for tests

* Use specified date modified value and some polishing

* Fix unit tests by applying changes on the object after saving the meta

* Lint fixes

* Setup timezone for tests to control output

* Avoid error logging in unit tests

* Fix timezones when reading data from DB

* Lint fixes

* Reorg the table names into getters in data stores

* Minor fixes on the scheme

* Move delete functions in each data store

* Lint fixes

* Fix un

--- a/plugins/woocommerce/client/legacy/css/admin.scss
+++ b/plugins/woocommerce/client/legacy/css/admin.scss
@@ -7572,6 +7572,7 @@ table.bar_chart {
 	}
 }
 
+.woocommerce-customer-stock-notifications .woocommerce-BlankState,
 .woocommerce_page_wc-orders .woocommerce-BlankState,
 .post-type-product .woocommerce-BlankState,
 .post-type-shop_order .woocommerce-BlankState {
@@ -8300,6 +8301,7 @@ table.bar_chart {
 	}
 }
 
+.woocommerce_page_wc-customer-stock-notifications .tablenav,
 .woocommerce_page_wc-orders .tablenav,
 .post-type-product .tablenav,
 .post-type-shop_order .tablenav {
@@ -9076,8 +9078,165 @@ body.woocommerce_page_wc-settings {
 }
 
 /**
+  * WooCommerce > Notifications > Stock notifications > Add/Edit elements.
+  */
+.woocommerce-customer-stock-notifications #poststuff .notification-data {
+	padding: 34px 32px;
+
+	&--create {
+		.notification-data__product-data {
+			margin-top: 20px;
+		}
+
+		.or_relation_label {
+			padding: 14px 0;
+			display: block;
+			text-align: center;
+			color: #777;
+			width: 80%;
+		}
+
+		.select2-container,
+		.or_relation_label__input {
+			width: 80% !important;
+		}
+
+		.notification-data__form-field .notification-data__form-field {
+			margin-top: 40px;
+		}
+	}
+
+	&__row {
+		display: block;
+		margin-bottom: 2em;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+
+		&--columns {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+
+			.notification-data__form-field,
+			.notification-data__meta-column {
+				width: 50%;
+			}
+
+			.notification-data__meta-column:last-child,
+			.notification-data__form-field:last-child {
+				width: 50%;
+			}
+		}
+
+		@media screen and (max-width: 782px) {
+			margin-bottom: 0px;
+
+			&--columns {
+
+				.notification-data__meta-column {
+					width: 50% !important;
+				}
+
+				.notification-data__form-field {
+					width: 100% !important;
+				}
+			}
+
+			.notification-data__form-field {
+				margin-bottom: 10px;
+			}
+		}
+	}
+
+	&__header-column {
+		width: 70%;
+		overflow: hidden;
+	}
+
+	&__header {
+		margin: 0;
+		font-size: 21px;
+		font-weight: 300;
+		line-height: 1.2;
+		text-shadow: 1px 1px 1px #fff;
+		padding: 0;
+
+		@media screen and (max-width: 782px) {
+			margin-bottom: 20px;
+		}
+	}
+
+	&__customer-data {
+		font-size: 17px;
+		margin-top: 0;
+		margin-bottom: 15px;
+	}
+
+	&__form-field {
+		clear: both;
+
+		label,
+		input:not([type=checkbox]),
+		select,
+		textarea {
+			width: 100%;
+		}
+
+		label {
+			color: #333;
+			font-weight: bold;
+			display: block;
+			padding: 0 0 15px;
+
+			a {
+				float: right;
+				margin-left: 10px;
+			}
+		}
+
+		.form-field__actions {
+			margin-bottom: 20px;
+
+			a {
+				display: block;
+				padding: 2px 0;
+			}
+		}
+	}
+
+	&__meta {
+		margin-top: 50px;
+
+		&-column :last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&__meta-data {
+		margin-bottom: 25px;
+
+		label {
+			font-size: 13px;
+			color: #777;
+			display: block;
+			margin-bottom: 13px;
+		}
+
+		span {
+			display: block;
+
+			a {
+				margin-left: 10px;
+			}
+		}
+	}
+}
+
+/**
  * Hide screen meta links on Advanced Keys settings page.
- */ 
+ */
 body.woocommerce_page_wc-settings-advanced-keys,
 body.woocommerce_page_wc-settings-advanced-webhooks,
 body.woocommerce-admin-page__extensions,
