Add ambiguous provider match notice to tracking number lookup form (#60470)
* Add ambiguous provider match notice to tracking number lookup form

* Add changefile(s) from automation for the following project(s): woocommerce, woocommerce/client/admin

* Add tests

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/plugins/woocommerce/client/admin/client/wp-admin-scripts/fulfillments/style.scss
+++ b/plugins/woocommerce/client/admin/client/wp-admin-scripts/fulfillments/style.scss
@@ -297,6 +297,14 @@
 	margin: 0;
 }
 
+.woocommerce-fulfillment-description-button {
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	line-height: 16px !important;
+	padding: 0 !important;
+	height: auto !important;
+}
+
 .woocommerce-fulfillment-status-badge {
 	display: flex;
 	flex-direction: row;
