Fix padding for checkout steps when step numbers are enabled (#60473)
* Add new mixin to simplify the code

* Actual changes

* Add changelog

--- a/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
+++ b/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
@@ -318,6 +318,12 @@ $fontSizes: (
 	}
 }
 
+@mixin cart-checkout-below-medium-container {
+	@container (max-width: 519px) {
+		@content;
+	}
+}
+
 @mixin cart-checkout-small-container {
 	@container (min-width: 400px) and (max-width: 519px) {
 		@content;
