--- a/plugins/woocommerce/templates/parts/variable-product-add-to-cart-with-options.html
+++ b/plugins/woocommerce/templates/parts/variable-product-add-to-cart-with-options.html
@@ -29,6 +29,6 @@
 <div class="wp-block-group">
 	<!-- wp:woocommerce/add-to-cart-with-options-quantity-selector {"quantitySelectorStyle":"stepper"} /-->
 
-	<!-- wp:woocommerce/product-button {"textAlign":"left","fontSize":"medium"} /-->
+	<!-- wp:woocommerce/product-button {"textAlign":"left"} /-->
 </div>
 <!-- /wp:group -->
