--- a/plugins/woocommerce/client/legacy/css/woocommerce.scss
+++ b/plugins/woocommerce/client/legacy/css/woocommerce.scss
@@ -134,7 +134,7 @@ p.demo_store,
 			}
 
 			del {
-				opacity: 0.5;
+				opacity: 0.7;
 				display: inline-block;
 			}
 		}
@@ -573,7 +573,7 @@ p.demo_store,
 
 			del {
 				color: inherit;
-				opacity: 0.5;
+				opacity: 0.7;
 				display: inline-block;
 			}
 
@@ -873,7 +873,6 @@ p.demo_store,
 				line-height: 1;
 				font-family: "WooCommerce";
 				content: "\e021";
-				content: "\e021" / "";
 				text-indent: 0;
 			}
 
@@ -1512,7 +1511,7 @@ p.demo_store,
 			width: 1em;
 			height: 1em;
 			// We use the old WooCommerce color on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-			background-color: #7F54B3;
+			background-color: #7f54b3;
 			border-radius: 1em;
 			cursor: ew-resize;
 			outline: none;
@@ -1530,13 +1529,13 @@ p.demo_store,
 			border: 0;
 			border-radius: 1em;
 			// We use the old WooCommerce color on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-			background-color: #7F54B3;
+			background-color: #7f54b3;
 		}
 
 		.price_slider_wrapper .ui-widget-content {
 			border-radius: 1em;
 			// We use the old WooCommerce color as the base on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-			background-color: darken(#7F54B3, 30%);
+			background-color: darken(#7f54b3, 30%);
 			border: 0;
 		}
 
@@ -1664,14 +1663,14 @@ p.demo_store,
 
 		&.alt {
 			// We use the old WooCommerce colors on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-			background-color: #7F54B3;
-			color: desaturate(lighten(#7F54B3, 50%), 18%);
+			background-color: #7f54b3;
+			color: desaturate(lighten(#7f54b3, 50%), 18%);
 			-webkit-font-smoothing: antialiased;
 
 			&:hover {
 				// We use the old WooCommerce colors on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-				background-color: darken(#7F54B3, 5%);
-				color: desaturate(lighten(#7F54B3, 50%), 18%);
+				background-color: darken(#7f54b3, 5%);
+				color: desaturate(lighten(#7f54b3, 50%), 18%);
 			}
 
 			&.disabled,
@@ -1681,8 +1680,8 @@ p.demo_store,
 			&:disabled:hover,
 			&:disabled[disabled]:hover {
 				// We use the old WooCommerce colors on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-				background-color: #7F54B3;
-				color: desaturate(lighten(#7F54B3, 50%), 18%);
+				background-color: #7f54b3;
+				color: desaturate(lighten(#7f54b3, 50%), 18%);
 			}
 		}
 
@@ -2048,7 +2047,7 @@ p.demo_store,
 
 	#payment {
 		// We use the old WooCommerce color as the base on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
-		background: desaturate(rgba(#7F54B3, 0.14), 21%);
+		background: desaturate(rgba(#7f54b3, 0.14), 21%);
 		border-radius: 5px;
 
 		ul.payment_methods {
@@ -2057,7 +2056,7 @@ p.demo_store,
 			padding: 1em;
 			// We use the old WooCommerce color as the base on purpose. See https://github.com/woocommerce/woocommerce/issues/55165.
 			border-bottom: 1px solid
-				darken(desaturate(rgba(#7F54B3, 0.14), 21%), 10%);
+				darken(desaturate(rgba(#7f54b3, 0.14), 21%), 10%);
 			margin: 0;
 			list-style: none outside;
 
