Fix styles in the Classic Template block add to cart form (#60611)
* Fix styles in the Classic Template block add to cart form

* Add changelog file

* Cleanup

* Apply CodeRabbit suggestion

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/classic-template/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/classic-template/style.scss
@@ -1,5 +1,12 @@
-:where(div[data-block-name="woocommerce/legacy-template"]) {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 1000px;
+/*
+ * We only want to apply these styles to the legacy template block, as other
+ * blocks have their own styles for this.
+ */
+.woocommerce :where(div[data-block-name="woocommerce/legacy-template"]) div.product form.cart div.quantity {
+	display: inline-block;
+	vertical-align: middle;
+
+	.input-text {
+		padding: 0.9rem 1.1rem;
+	}
 }
