Fix Cart and Checkout blocks layout issues when parent element has flexbox properties (#60731)
* Add width 100% property to cart and checkout box using container-type to avoid flexbox parent layout issues

* Add changelog

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/cart/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/cart/style.scss
@@ -1,6 +1,7 @@
 .wp-block-woocommerce-cart {
 	// Don't remove this, it marks the container for container queries used in inner blocks.
 	container-type: inline-size;
+	width: 100%;
 }
 
 .wc-block-cart {
