Avoid lists of one Express Payment options. (#60674)
Co-authored-by: Darin Kotter <darin.kotter@gmail.com>
Co-authored-by: Thomas Roberts <5656702+opr@users.noreply.github.com>
Co-authored-by: github-actions <github-actions@github.com>

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/cart-checkout-shared/payment-methods/express-payment/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/cart-checkout-shared/payment-methods/express-payment/style.scss
@@ -11,6 +11,7 @@ $border-width: 1px;
 		margin: 0;
 		overflow: hidden;
 		text-align: center;
+		> div,
 		> li {
 			margin: 0;
 			width: 100%;
@@ -127,6 +128,7 @@ $border-width: 1px;
 
 .wc-block-components-express-payment--cart {
 	.wc-block-components-express-payment__event-buttons {
+		> div,
 		> li {
 			padding-bottom: $gap-small;
 			text-align: center;
