--- a/plugins/woocommerce/client/blocks/assets/js/blocks/cart/inner-blocks/cart-express-payment-block/editor.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/cart/inner-blocks/cart-express-payment-block/editor.scss
@@ -61,6 +61,7 @@
 // Center images rendered in place of buttons in the editor
 .wc-block-components-express-payment {
 	.wc-block-components-express-payment__event-buttons {
+		> div,
 		> li {
 			pointer-events: none;
 			user-select: none;
