Product Reviews Block: Add outline offset to comment form (#60890)
* Add outline offset to comment form in product reviews style

* Add changefile(s) from automation for the following project(s): woocommerce

* Add outline offset to comment form in product reviews style

* switch to :focus

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/product-reviews/inner-blocks/review-form/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/product-reviews/inner-blocks/review-form/style.scss
@@ -64,6 +64,10 @@
 		}
 	}
 
+	textarea[name="comment"]:focus {
+		outline-offset: -2px;
+	}
+
 	.comment-form-author,
 	.comment-form-email,
 	.comment-form-url {
