Add autocomplete functionality to Checkout block (#60891)
Co-authored-by: Raluca Stan <ralucastn@gmail.com>

--- a/plugins/woocommerce/client/blocks/packages/components/text-input/style.scss
+++ b/plugins/woocommerce/client/blocks/packages/components/text-input/style.scss
@@ -4,6 +4,10 @@
 	margin-top: $gap;
 	white-space: nowrap;
 
+	.wc-block-components-text-input__wrapper {
+		position: relative;
+	}
+
 	label {
 		@include reset-color();
 		@include reset-typography();
