--- a/plugins/woocommerce/client/blocks/assets/js/blocks/next-previous-buttons/editor.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/next-previous-buttons/editor.scss
@@ -1,3 +1,7 @@
-.wc-block-next-previous-buttons__button {
-	pointer-events: none;
+.wc-block-next-previous-buttons {
+	padding: 2px;
+
+	&__button {
+		pointer-events: none;
+	}
 }
