Update Theme-related banners in Customize Your Store (#61116)
* Remove unnecessary React Fragment

* Add PickYourThemeBanner component

* Remove onboarding/themes/recommended endpoint

* Remove ThemeCard component from customize-store flow together with related files

ThemeCards won't be used anymore. This commit also removed other code that was used just by this component.

* Add missing image for pick your theme banner

* Use PickYourThemeBanner on Customize Store screen

Show banner for users using default theme who didn't complete Customize Store task. Similarly as we were showing ThemeCards component earlier.

* Remove remaining usage of themeData

* Add Theme Banner to CYS - assembler hub sidebar

* Theme banner - do not wrap text when not needed, better translations

Props @kokkieh for review

* Customize Your Store sidebar - prevent scrollbar

Props @kokkieh for noticing it

* Add changefile(s) from automation for the following project(s): woocommerce, woocommerce/client/admin

* Theme banner content - add flex-basis to list element

* Lint fix

* Intro banners - support h1 and h2 headings

* Apply refactor suggestion from coderabbit. Previous code could lead to circular deps

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/plugins/woocommerce/client/admin/client/customize-store/assembler-hub/components/style.scss
+++ b/plugins/woocommerce/client/admin/client/customize-store/assembler-hub/components/style.scss
@@ -24,6 +24,34 @@
 	&.slide-from-right {
 		animation-name: slide-from-right;
 	}
+
+	.woocommerce-edit-site-sidebar-navigation-screen-theme-banner {
+		margin-top: 32px;
+		background: rgba(242, 237, 255, 0.6) url(../../assets/images/sidebar-theme-banner.svg) no-repeat bottom right;
+		background-size: contain;
+		border-radius: 4px;
+		padding: 1rem;
+
+		&__title {
+			max-width: 170px;
+			line-height: 1.4;
+			margin: 0 0 8px 0;
+		}
+
+		&__description {
+			color: var(--gutenberg-gray-900, #1e1e1e);
+			margin-top: 8px;
+		}
+
+		&__button {
+			$button-padding: 8px;
+			padding-left: $button-padding;
+			padding-right: $button-padding;
+			// negative margin to align button with rest of the content
+			margin-left: -$button-padding;
+			margin-right: -$button-padding;
+		}
+	}
 }
 
 @keyframes slide-from-right {
