Fix order summary description text overflow in checkout (#61207)
Prevent long text in product descriptions from expanding beyond the order summary container by adding word-break: break-word to the description element.

--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/order-summary/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/order-summary/style.scss
@@ -94,6 +94,7 @@
 		padding-left: $gap-large;
 		padding-right: $gap-small;
 		padding-bottom: $gap;
+		word-break: break-word;
 
 		p,
 		.wc-block-components-product-metadata {
