Show connected account more clearly in In-App Marketplace (#61334)
* In-App: My Subscriptions - Clearly show connected account

When viewing My Subscriptions page is critical to make sure which account is currently connected to WooCommerce.com. We are making it very explicit in this commit.

* In-App marketplace: clearer user information in the header

In Marketplace header, we will show connected account more clearly - with full email on tablet+ views. This change doesn't affect non-marketplace pages

* Add changefile(s) from automation for the following project(s): woocommerce, woocommerce/client/admin

* fix typo

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Remove typo

* Address review comments: use MARKETPLACE_HOST constant for URL, fix typo

* Fix typo

* Lint fix

---------

Co-authored-by: github-actions <github-actions@github.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/plugins/woocommerce/client/admin/client/marketplace/components/header-account/header-account.scss
+++ b/plugins/woocommerce/client/admin/client/marketplace/components/header-account/header-account.scss
@@ -37,6 +37,47 @@
 		}
 	}
 
+	&__header-account-trigger {
+		display: contents;
+
+		&__email,
+		&__expand-icon {
+			display: none;
+		}
+
+		@media screen and (min-width: $breakpoint-medium) {
+			display: flex;
+			align-items: center;
+			gap: $grid-unit-10;
+			border: 1px solid $gutenberg-gray-300;
+			margin: -6px; // accomodate for being placed in a button
+			height: 40px;
+			padding-left: $grid-unit-10;
+			padding-right: $grid-unit-10;
+			max-width: 280px;
+
+			&__email {
+				display: block;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				overflow: hidden;
+			}
+
+			&__expand-icon,
+			svg,
+			img {
+				display: block;
+				width: $grid-unit-30;
+				height: $grid-unit-30;
+				flex-shrink: 0;
+			}
+		}
+
+		button:focus & {
+			border-color: transparent;
+		}
+	}
+
 	&__header-account-modal-overlay {
 		// This is to ensure the modal is above the user menu popover.
 		z-index: 1000000;
