--- a/plugins/woocommerce/client/admin/client/marketplace/components/tabs/tabs.scss
+++ b/plugins/woocommerce/client/admin/client/marketplace/components/tabs/tabs.scss
@@ -59,7 +59,7 @@
 	}
 }
 
-@media screen and (max-width: $breakpoint-medium) {
+@media screen and (max-width: $breakpoint-large) {
 	.woocommerce-marketplace__tabs {
 		border-bottom: 1px solid $gutenberg-gray-300;
 
