--- a/plugins/woocommerce/client/admin/client/marketplace/components/content/content.scss
+++ b/plugins/woocommerce/client/admin/client/marketplace/components/content/content.scss
@@ -14,6 +14,12 @@
 
 @media screen and (min-width: $breakpoint-medium) {
 	.woocommerce-marketplace__content {
+		padding: $grid-unit-30 $grid-unit-40;
+	}
+}
+
+@media screen and (min-width: $breakpoint-large) {
+	.woocommerce-marketplace__content {
 		padding: $grid-unit-60 $grid-unit-40;
 	}
 }
