Featured Product and Featured Category block: Fix inner post title block getting forced foreground color (#61554)

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/featured-items/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/featured-items/style.scss
@@ -153,6 +153,16 @@
 		}
 	}
 
+	&__inner-blocks {
+		.wp-block-post-title,
+		.wp-block-woocommerce-category-title {
+			&,
+			a {
+				color: inherit;
+			}
+		}
+	}
+
 	& &__title {
 		color: inherit;
 		margin-top: 0;
