Product Gallery thumbnails are rendered out of place when (#61531)
* Force mobile layout in editor for Product Gallery, no matter the settings

* Add changelog

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/product-gallery/inner-blocks/product-gallery-thumbnails/editor.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/product-gallery/inner-blocks/product-gallery-thumbnails/editor.scss
@@ -9,3 +9,10 @@
 		pointer-events: none;
 	}
 }
+
+// We want to force opinionated mobile design no matter the wrap/no-wrap setting.
+@include breakpoint("<600px") {
+	.wp-block-woocommerce-product-gallery-is-layout-flex.is-nowrap {
+		flex-wrap: wrap;
+	}
+}
