Featured Items: allow all inner blocks (#61656)

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/featured-items/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/featured-items/style.scss
@@ -24,7 +24,7 @@
 }
 
 %with-resizable-box {
-	.components-resizable-box__container {
+	> .components-resizable-box__container {
 		position: absolute !important;
 		top: 0;
 		left: 0;
