--- a/plugins/woocommerce/client/blocks/assets/js/blocks/cart-checkout-shared/payment-methods/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/cart-checkout-shared/payment-methods/style.scss
@@ -229,7 +229,8 @@
 			justify-content: flex-start;
 			border-width: 0;
 		}
-		.wc-block-components-radio-control__label img {
+        // Targets payment card icons used in payment options
+		.wc-block-components-radio-control__label > img {
 			height: 24px;
 			max-height: 24px;
 			max-width: 100%;
