Add to Cart + Options: stretch Product Quantity to the same height as the Add to Cart Button (#61713)
* Add to Cart + Options: stretch Product Quantity to the same height as the Add to Cart Button

* Add changelog file

* Minor CSS fixes

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/add-to-cart-with-options/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/add-to-cart-with-options/style.scss
@@ -15,6 +15,13 @@
 	}
 }
 
+// Set the height to 100% so when the quantity selector is inside a flex
+// container with `verticalAlignment: stretch` (that's the default in WC core
+// templates), the quantity selector will stretch to the height of the container.
+:where(.wc-block-add-to-cart-with-options__quantity-selector .wc-block-components-quantity-selector) {
+	height: 100%;
+}
+
 :where(.wc-block-add-to-cart-with-options__quantity-selector),
 :where(.wc-block-add-to-cart-with-options-grouped-product-item-selector) {
 	// This resets some WC component styles, so we need it to have specificity
