--- a/plugins/woocommerce/client/blocks/assets/js/blocks/add-to-cart-with-options/editor.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/add-to-cart-with-options/editor.scss
@@ -29,3 +29,9 @@
 		color: inherit;
 	}
 }
+
+// It allows the `.wc-block-components-quantity-selector` height: 100% to work
+// when the block contents are wrapped in a <Disabled> component.
+:where(.wc-block-add-to-cart-with-options__quantity-selector .components-disabled) {
+	display: contents;
+}
